--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ ol.commentlist a.comment-edit-link{
 
 ol.commentlist span.edit-comment{
 	position: absolute;
-	right: 10px;
+	right: 0;
 	top: 8px;
 }
 
@@ -276,14 +276,26 @@ ol.commentlist li.bypostauthor{
 	border-radius: 3px;
 }
 
+ol.commentlist ul.children li{
+	background-color: #cccccc;
+}
+
+ol.commentlist ul.children li ul.children li{
+	background-color: #bbbbbb;
+}
+
+ol.commentlist ul.children li ul.children li ul.children li{
+	background-color: #aaaaaa;
+}
+
+ol.commentlist article{
+	border-bottom: none !important;
+}
+
 a.comment-reply-link{
 	position: absolute;
 	right: 0;
 	bottom: 0;
-}
-
-#cancel-comment-reply{
-	padding-left: 20px;
 }
 
 #comment-nav ul{
@@ -328,6 +340,10 @@ ol.pinglist{
 
 #comment{
 	width: 270px;
+}
+
+ol.commentlist #respond{
+	padding: 5px 10px;
 }
 
 /* specific post-type styles */
